build(core): 修改注释
